- Fixed bug #41599 (setTime() fails after modify() is used).